Add 2 new fields for showing the word occurence count
limit: number of max words to return
skip_if_process_incomplete: Only return a result when every tasks have been processed
